Fixed tabzilla letter spacing.

--- a/media/css/sandstone/tabzilla.less
+++ b/media/css/sandstone/tabzilla.less
@@ -189,6 +189,7 @@
     font-size: 13px;
     margin: 0 20px .4em 0;
     white-space: nowrap;
+    letter-spacing: -1px;
 }
 
 #tabzilla-panel #tabzilla-nav ul {
@@ -224,6 +225,7 @@
     display: block;
     padding: .4em 20px .4em 0;
     outline: 0;
+    letter-spacing: 0;
 }
 
 #tabzilla-panel a,
