--- a/media/css/sandstone/tabzilla.less.css
+++ b/media/css/sandstone/tabzilla.less.css
@@ -149,6 +149,7 @@
   font-size: 13px;
   margin: 0 20px .4em 0;
   white-space: nowrap;
+  letter-spacing: -1px;
 }
 #tabzilla-panel #tabzilla-nav ul {
   margin: 0;
@@ -178,6 +179,7 @@
   display: block;
   padding: .4em 20px .4em 0;
   outline: 0;
+  letter-spacing: 0;
 }
 #tabzilla-panel a,
 #tabzilla-panel a:link,
